# deepAgent

./: .gitignore  ARCHITECTURE.md  README.md  install.bat  install.sh  install_mcp.bat  start.bat  start.sh
.trae/documents/: plan_20260214_124205.md  plan_20260214_130340.md
backend/: pyproject.toml
backend/config/: mcp_servers.yaml  models.yaml
backend/deepagent/: agent.py  cli.py  config.py  logger.py  main.py  memory.py  models.py  server.py  sessions.py  todos.py  toolbox.py
backend/deepagent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/deepagent/api/: main.py  server.py  sessions.py
backend/deepagent/common/: config.py  exceptions.py  logger.py  schemas.py
backend/deepagent/core/: agent.py  memory.py  models.py  prompts.py  todos.py  toolbox.py
backend/deepagent/core/execution/: __init__.py  executor.py  prompts.py
backend/deepagent/core/observer/: __init__.py  observer.py  prompts.py
backend/deepagent/core/planner/: __init__.py  planner.py  prompts.py
backend/deepagent/integrations/: mcp_client.py  skills.py
backend/tests/: test_config.py  test_memory_summary.py  test_models.py
config/: models.yaml  models2.yaml
data/: 5e1972d6-87fb-41ee-a97a-9f0dc1ef1f4b.db-shm  69a71900-4d29-483e-94fd-1b91ae1ded94.db  a3da30f1-f77a-4706-b5e7-8312c8ece8c8.db  a5b67b85-e6c6-42bb-b270-0d34b0a69faf.db  checkpoints.db  memory_store.json  sessions.json  todos.json
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  context.tsx  logger.ts
frontend/src/components/: Chat.tsx  (+1 more)
